# my-codes

./: .envrc  .gitignore  LICENSE  break-and-else.py  circle.sh  dns.rs  flake.nix  gluttonous-snake.py  helloworld.cpp  test.py  torch.py  train.py  variable-exchange.py  xy.cpp
.github/workflows/: build-images-mdns-collector.yml  build-images-mihomo-updater.yml  build-images-openai-whisper.yml  build-images-qwen-asr.yml
C/: agree.c  agree.nix  boolean.c  boolean.nix  compare.c  compare.nix  default.nix  discount.c  fibonacci.c  filterPrime.c  float.c  float.nix  loops.c  loops.nix  math.c  math.nix  name.c  name.nix  pi.c  pi.nix  project-routine-scheduler.c  readcsv.c  switch.c  triangle.c  var.c  var.nix
C/cOneHundred/: 11.c  13.c  6.c
C/src/: agree-cs50.c  array.c  boolean.c  cOneHundred-3.c  cOneHundred-4.c  cOneHundred-5.c  compare-cs50.c  discount.c  duplicated-file-searcher.c  fibonacci.c  float.c  for.c  logical.c  loops.c  math.c  name-cs50.c  pi.c  pointer.c  project-routine-scheduler.c  readcsv.c  scanf.c  string.c  test.c  var.c  while.c
Haskell/: 1.hs  binarySearch.hs  camera-web-stream.hs  cliargs.hs  default.nix  exit.hs  fibonacci.hs  filterPrime.hs  input  input.hs  interactive  listDirs.hs  lucas.hs  maximum.hs  prime.hs  quant.hs  queryArray.hs  temperature-recognition.hs  thermal-processor.hs
Haskell/cOneHundred/: 13.hs  14.hs  15.hs  16.hs  17.hs  18.hs  19.hs  20.hs  21.hs  24.hs  25.hs  27.hs  28.hs  29.hs  30.hs
Haskell/id-generator/: CHANGELOG.md  id-generator.cabal
Haskell/kjkEncryptor/: main.hs
Nix/: devShells-binEnv.nix  devShells-comfyui.nix  devShells-default.nix  fibonacci.nix  nix-math.nix  power.nix  recursion.nix
Nix/pkgs/: adafruit-circuitpython-mlx90640.nix  audio-relay.nix  cockpit-tools.nix  duplicate-file-finder.nix  epson-maintenance.nix  haskellEnv.nix  id-generator.nix  inC.nix  kmsxx-src.nix  libcamera-raspi.nix  libpisp.nix  mihomo-updater-updater.nix  mihomo-updater.nix  ncmdump.nix  ocs-desktop.nix  picamera2.nix  pidng.nix  pystun3.nix  python312Env.nix  python312FHSEnv.nix  python3Env.nix  python3FHSEnv.nix  qoder.nix  rpi-kms.nix  simplejpeg.nix  v4l2-python3.nix  v4l2.nix
Python/: camera-web-stream.py  class-schedule.py  duplicate-file-finder.py  duplicated-file-searcher.py  economic-strategy.py  fibonacci.py  input.py  microeconomics-simulator.py  obfuscator.py  p-p-d.py  project-routine-scheduler.py  quant.py  roots-resolver.py  teaching-week-reminder.py  temp-test.py  test.py  thermal-sensor-pipe.py  thermal-sensor-web-stream.py  thermal-sensor.py  thermal-web-stream.py  update-mihomo.py
Python/quant-finance/: AAPL.py  quant.py  sample.py
Python/server-monitor/: app.py
Python/web-stream/: web-stream.py
Rust/: default.nix
Rust/guessing-game/: Cargo.toml
SOPs/: .envrc  README.md
SOPs/audio-process/: Dockerfile.openai-whisper:cpu  Dockerfile.qwen-asr:cpu  README.md  batch-audio-to-srt-genai.py  batch-audio-to-srt.py  qwen-asr.py  requirements.txt  trans-genai.py  trans-local.py  whisper.sh
SOPs/course-election/: Cargo.toml  README.md  auth.go  cache.go  channels.go  cli.go  commands.go  config.go  discuss.md  go.mod  go.sum  lesson_cache.go  main.go  payloads.go  payloads_test.go  query-example.md  select.go  select_test.go  timeutil.go  types.go
SOPs/course-election/internal/app/: auth.go  cache.go  channels.go  cli.go  commands.go  config.go  lesson_cache.go  payloads.go  payloads_test.go  query_output.go  run.go  select.go  select_test.go  timeutil.go  types.go
SOPs/course-election/internal/jwxt/: auth.go  cache.go  captcha.go  channels.go  class_schedule.go  config.go  http.go  lesson_cache.go  payloads.go  payloads_test.go  select.go  select_test.go  teach_task.go  timeutil.go  types.go
SOPs/course-election/src/: app.rs  model.rs
SOPs/course-election/src/app/: browser.rs  cache.rs  cli.rs  commands.rs  http.rs  output.rs  parser.rs  support.rs
SOPs/course-schedule-conversion/: Cargo.toml  classschedule.go  go.mod  go.sum  ics.go  main.go  teachtask.go  types.go
SOPs/course-schedule-conversion/src/: calendar.rs  config.rs  lib.rs  main.rs  model.rs  schedule.rs
SOPs/duplicate-file-finder/: Cargo.toml  go.mod  main.go
SOPs/duplicate-file-finder/src/: main.rs
SOPs/epson-maintenance/: Cargo.toml  remote-printing.py
SOPs/etctl/: go.mod  go.sum  main.go
SOPs/graphic-design-ng/: README.md  index.html  package-lock.json  package.json
SOPs/image-process/: .envrc  README.md  ocr-local-once.py  ocr-local.py  ocrcore.py
SOPs/localllm/: batch-ocr.py  core.py  ocr.py
SOPs/localllm-misc/: .envrc
SOPs/localllm-notebooklm/: .envrc  Cargo.toml  architecture_v1.md  architecture_v2.md  discussion.md  discussion2.md  discussion3.md
SOPs/localllm-notebooklm/scripts/: build_chapter_indexes.py  build_manifest.py  build_master_indexes.py  build_print_bundle.py  build_supplement_cards.py  build_topic_indexes.py  convert_all_atoms.py  convert_atom.py  convert_atom_v2.py  extract_pdf_page_map.py  llmcall.py  stats_page_md.py  stats_supplement_cards.py
SOPs/localllm-notebooklm/scripts-v2/: build_pdf_manifest.py  normalize_to_pdf.py
SOPs/localllm-notebooklm/src/: lib.rs
SOPs/mdns-collector/: Dockerfile  collector.py  entrypoint.sh
SOPs/mihomo-updater/: .gitignore  Cargo.toml  Dockerfile  resolver.py  updater.py
SOPs/mihomo-updater/examples/vps-configs/: 10-node.example.toml
SOPs/mihomo-updater/resolver/: Dockerfile  go.mod  main.go
SOPs/mihomo-updater/src/: config.rs  lib.rs  models.rs  yq.rs
SOPs/mihomo-updater/updater/: go.mod  main.go
SOPs/openai-whisper/: Dockerfile.openai-whisper:rocm  Dockerfile.openai-whsiper:cpu  Dockerfile.openai-whsiper:rocm  whisper.sh
SOPs/pdf-process/: README.md  (+6 more)
SOPs/rest-cpu-burner/: Cargo.toml
SOPs/rest-cpu-burner/src/: api.rs  control.rs  lib.rs  sampler.rs  state.rs  worker.rs
Static/: class-schedule-nmj.csv  class-schedule.csv  class_schedule_2025-bundled.ics  class_schedule_2025.ics  mihomo-config.yaml  teaching_week_reminder_2025.ics
nix-minecraft/: auto-control.py  test.py
project-routine-scheduler/: class-schedule.csv
(+77 files in other folders)
