[package]
name = "course-election"
version = "1.0.0"
edition = "2024"

[[bin]]
name = "course-election"
path = "src/bin/course-election.rs"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = { version = "0.10", features = ["serde"] }
clap = { version = "4.6", features = ["derive"] }
glob = "0.3"
headless_chrome = "1.0.22"
regex = "1.12"
reqwest = {
  version = "0.13",
  default-features = false,
  features = [
    "blocking",
    "charset",
    "cookies",
    "gzip",
    "http2",
    "json",
    "rustls",
  ]
}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = 3
strip = true  # 去除符号表，减小体积
lto = "fat"  # 跨 crate 链接时全局优化，性能提升 10-30%
panic = "abort"  # 减小体积并略微提升性能
codegen-units = 1  # 禁止并行编译，允许更激进的内联优化
