[package]
name = "course-schedule-conversion"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "course-schedule-conversion"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["clock"] }
chrono-tz = "0.10"
clap = { version = "4.6", features = ["derive"] }
icalendar = "0.17"
once_cell = "1.21"
regex = "1.12"
scraper = "0.26"
uuid = { version = "1.23", features = ["v5"] }
