[package]
name = "localllm-notebooklm"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "batch-paddle-ocr"
path = "src/bin/batch-paddle-ocr.rs"

[[bin]]
name = "fix-md"
path = "src/bin/fix-md.rs"

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.1", features = ["derive"] }
dotenvy = "0.15.7"
reqwest = { version = "0.13.4", features = ["json", "multipart"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }

[profile.release]
opt-level = 3
strip = true  # 去除符号表，减小体积
lto = "fat"  # 跨 crate 链接时全局优化，性能提升 10-30%
panic = "abort"  # 减小体积并略微提升性能
codegen-units = 1  # 禁止并行编译，允许更激进的内联优化
